# robotframework-trace-viewer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
docs/: cli.md  features.md  integrations.md
e2e_tests/: test_features.robot
src/trace_viewer/: __init__.py  cli.py  config.py  listener.py
src/trace_viewer/capture/: __init__.py  console.py  dom.py  network.py  screenshot.py  variables.py
src/trace_viewer/comparison/: visual_diff.py
src/trace_viewer/export/: __init__.py  pdf_exporter.py
src/trace_viewer/integrations/: __init__.py  cicd.py  pabot_merger.py  reportportal.py
src/trace_viewer/media/: __init__.py  gif_generator.py
src/trace_viewer/stats/: __init__.py  dashboard.py
src/trace_viewer/storage/: __init__.py  compression.py  ring_buffer.py  trace_writer.py
src/trace_viewer/viewer/: __init__.py  comparator.py  generator.py  suite_generator.py
src/trace_viewer/viewer/templates/: suite_viewer.html  viewer.html
tests/: __init__.py
tests/e2e/: __init__.py  test_e2e_v030.py
tests/integration/: __init__.py  test_full_flow.py
tests/unit/: __init__.py  test_cicd.py  test_cli.py  test_cli_v030.py  test_comparator.py  test_compression.py  test_config.py  test_console.py  test_dom.py  test_gif_generator.py  test_listener.py  test_network.py  test_pabot_merger.py  test_pdf_exporter.py  test_reportportal.py  test_ring_buffer.py  test_screenshot.py  test_stats.py  test_storage.py  test_suite_generator.py  test_variables.py  test_viewer.py  test_visual_diff.py
